modif après le meet du 31/10/2025
